<resources>
    <string name="app_name">WeatherApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">F1</string>
    <string name="max_min_temp">%1$s°C/%2$s°C</string>
    <string name="max_min_temp_f">%1$s°F/%2$s°F</string>
    <string name="current_temp">%1$s°C</string>
    <string name="current_temp_f">%1$s°F</string>
    <string name="https">https:</string>
    <string name="location">Location:</string>
    <string name="enable_location">Enable location?</string>
    <string name="location_disabled">"Location disabled. Do you want to enable location?"</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="permission_granted">Permission granted!</string>
    <string name="permission_denied">Permission denied</string>
</resources>
